# monitoring_stack_setup

./: .gitignore  .python-version  AGENTS.md  GEMINI.md  Makefile  README.md  galaxy.yml  install-all.yml  install-grafana.yml  install-loki.yml  install-mimir.yml  pyproject.toml  requirements.txt  requirements.yaml  uninstall-all.yml  uninstall-grafana.yml  uninstall-loki.yml  uninstall-mimir.yml  uninstall-tempo.yml
env/local/: hosts.yml  vars.yml
env/local/group_vars/: all.yml
meta/: runtime.yml
playbooks/: healthcheck-all.yml  healthcheck-alloy.yml  healthcheck-grafana.yml  healthcheck-loki.yml  healthcheck-mimir.yml  healthcheck-otelcol.yml  healthcheck-otelcoll.yml  healthcheck-prometheus.yml  healthcheck-tempo.yml  install-all.yml  install-alloy.yml  install-grafana.yml  install-loki.yml  install-mimir.yml  install-otelcoll.yml  install-prometheus.yml  install-tempo.yml  uninstall-all.yml  uninstall-alloy.yml  uninstall-grafana.yml  uninstall-loki.yml  uninstall-mimir.yml  uninstall-otelcol.yml  uninstall-otelcoll.yml  uninstall-prometheus.yml  uninstall-tempo.yml  validate-all.yml
roles/alloy/defaults/: main.yml
roles/alloy/meta/: main.yml
roles/alloy/tasks/: main.yml  uninstall.yml  validate.yml
roles/alloy/templates/: alloy.service.j2  config.alloy.j2
roles/base/defaults/: main.yml
roles/base/meta/: main.yml
roles/base/tasks/: main.yml  uninstall.yml
roles/grafana/defaults/: main.yml
roles/grafana/meta/: main.yml
roles/grafana/tasks/: main.yml  uninstall.yml  validate.yml
roles/health/defaults/: main.yml
scripts/: hosts_fetch.py
(+48 files in other folders)
